--- a/portfolio/portfolio.css
+++ b/portfolio/portfolio.css
@@ -21,7 +21,7 @@ nav{
   justify-content: space-between;
   margin-bottom: 20px;
   position: fixed;
-  top: 5px;
+  top: 0px;
   left: 5px;
   right: 5px;
   height: 55px;
@@ -35,7 +35,7 @@ nav{
 
 .left-section{
   display: flex;
-  width:350px;
+  width:320px;
   align-items: center;
   margin-right: 10px;
 }
@@ -49,7 +49,7 @@ nav{
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  width: 550px;
+  width: 680px;
 }
 
 body{
@@ -62,7 +62,7 @@ body{
   border: none;
   border-radius: 5px;
   box-shadow: 1px 1px 2px #dbe3db;
-  width: 150px;
+  width: 130px;
   height: 30px;
   transition: 0.75s;
 }
@@ -110,4 +110,8 @@ body{
 .me{
   width: 150px;
   border-radius: 60px;
+}
+
+.github-button{
+  width: 50px;
 }
