--- a/portfolio/portfolio.css
+++ b/portfolio/portfolio.css
@@ -1,17 +1,30 @@
 body{
   background-color: #2c404e;
+  padding-bottom: 20px;
+  padding-left: 10px;
 }
 
 p{
-  font-family: Arial;
+  margin-bottom: 0;
+  margin-left: 0;
+  margin-right: 0;
   margin-top: 10px;
-  color: #dbe3db;
+  color: #6bbfda;
   margin-left: 5px;
+  font-family: Arial;
+}
+
+h4{
+  margin-top: 10px;
+  color: #ea9083;
+  margin-left: 5px;
+  font-family: Arial;
 }
 
 button {
   background-color: #6bbfda;
   font-size: 15px;
+  cursor: pointer;
 }
 
 nav{
@@ -33,6 +46,11 @@ nav{
   z-index: 100;
 }
 
+body{
+  margin: 0;
+  padding-top: 50px;
+}
+
 .left-section{
   display: flex;
   width:320px;
@@ -42,6 +60,11 @@ nav{
 
 .phone{
   margin-left: 20px;
+  color: white;
+}
+
+.email{
+  color: white;
 }
 
 .right-section{
@@ -50,11 +73,6 @@ nav{
   align-items: center;
   justify-content: space-between;
   width: 680px;
-}
-
-body{
-  margin: 0;
-  padding-top: 50px;
 }
 
 .header-button{
@@ -80,18 +98,20 @@ body{
 }
 
 .info-on-me{
-  display: grid;
-  grid-template-columns: 1fr, 1fr;
-  background-color: blue;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  /*background-color: blue;*/
 }
 
 .info-text{
   display: grid;
   grid-template-rows: 1fr 1fr;
   color: #ea9083;
-  margin-left: 5px;
-  background-color: red;
+  margin-left: 120px;
   width: 450px;
+  /*background-color: red;*/
 }
 
 .photo-outline{
@@ -103,7 +123,7 @@ body{
   width: 350px;
   height: 350px;
   border-radius:175px;
-  margin-right: 50px;
+  margin-right: 130px;
   grid-column: 2;
 }
 
@@ -112,11 +132,15 @@ body{
   border-radius: 60px;
 }
 
+.school{
+  width: 350px;
+}
+
 .github-button-image{
   width: 50px;
 }
 
-.github-button{
+.github-button, .linkedIn-button{
   background: none;
   border: solid;
   border-radius: 50px;
@@ -134,16 +158,46 @@ body{
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
-  padding-left: 70px;
+  justify-content: space-evenly;
+  padding-top: 50px;
   padding-right: 70px;
-  background-color: pink;
+  /*background-color: pink;*/
 }
 
-.linkedIn-logo{
+.linkedIn-button{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-family: Arial;
+  font-weight: bold;
+  font-size: 30px;
   color: black;
-  border: solid;
-  width: 20px;
-  border-width: 1px;
+}
+
+.linkedIn-button:hover{
+  background-color: rgb(0, 65, 130);
+  color: white;
+
+}
+
+.container{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 20px;
+  border-color: black;
+  border-top-style: solid;
+  border-top-width: 1px;
+  padding-top: 5px;
+}
+
+.container img{
+  order: 1;
+  margin-left: 50px;
+  margin-right: 175px;
+  max-width: 300px;
+}
+
+.container div{
+  order: 0;
 }
