--- a/portfolio/portfolio.css
+++ b/portfolio/portfolio.css
@@ -1,24 +1,23 @@
-body{
+body {
   background-color: #2c404e;
-  padding-bottom: 20px;
-  padding-left: 10px;
+  padding: 0;
+  margin: 0;
+  padding-top: 50px;
+  width: 100%; /* Ensure full width of the page */
 }
 
-p{
-  margin-bottom: 0;
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 10px;
+p, h4 {
+  padding: 0 10px;
+  margin: 10px 0 0 5px;
+  font-family: Arial;
+}
+
+p {
   color: #6bbfda;
-  margin-left: 5px;
-  font-family: Arial;
 }
 
-h4{
-  margin-top: 10px;
+h4 {
   color: #ea9083;
-  margin-left: 5px;
-  font-family: Arial;
 }
 
 button {
@@ -27,177 +26,306 @@ button {
   cursor: pointer;
 }
 
-nav{
-  height:55px;
+nav {
+  height: 12%;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   margin-bottom: 20px;
   position: fixed;
-  top: 0px;
+  top: 0;
   left: 5px;
   right: 5px;
-  height: 55px;
   background-color: #2c404e;
-  border-bottom: 1px;
-  border-bottom-width: .5px;
-  border-bottom-style: solid;
-  border-bottom-color: black;
+  border-bottom: 0.5px solid black;
   z-index: 100;
 }
 
-body{
-  margin: 0;
-  padding-top: 50px;
+li {
+  list-style-type: none;
 }
 
-.left-section{
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+video {
+  width: 100%;
+  max-width: 600px;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.left-section, .right-section {
   display: flex;
-  width:320px;
   align-items: center;
+}
+
+.left-section {
+  width: 30%px;
   margin-right: 10px;
 }
 
-.phone{
+.phone, .email {
+  color: white;
+}
+
+.phone {
   margin-left: 20px;
-  color: white;
 }
 
-.email{
-  color: white;
-}
-
-.right-section{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+.right-section {
   justify-content: space-between;
-  width: 600px;
+  width: 40%;
+  padding-right: 5%;
 }
 
-.header-button{
-  color: 29608e3;
+.header-button {
+  color: #29608e;
   border: none;
   border-radius: 5px;
   box-shadow: 1px 1px 2px #dbe3db;
-  width: 130px;
+  width: 120%;
   height: 30px;
   transition: 0.75s;
 }
 
-.header-button:hover{
+/* TODO: Finish making responsive */
+
+@media (max-width: 600px) {
+  .header-button {
+      font-size: 14px; /* Smaller buttons on small screens */
+  }
+  .photo-outline {
+      width: 80%; /* Adjust width for smaller screens */
+      margin: auto; /* Center image on smaller screens */
+  }
+}
+
+/* TODO - - - - - - - - - - - - - - */
+
+.header-button:hover {
   background-color: #dbe3db;
   color: #ea9083;
 }
 
-.name{
+.resume-button{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  color: white;
+  transition: 0.75s;
+}
+
+.resume-button:hover {
+  cursor: pointer;
+  color: #ea9083;
+  text-decoration: underline;
+}
+
+.name {
   display: flex;
   justify-content: center;
   color: white;
   text-shadow: 1px 1px 2px black;
 }
 
-.info-on-me{
+.info-on-me {
   font-size: 20px;
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  /*background-color: blue;*/
 }
 
-.info-text{
+.follower {
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  background-color: rgba(0, 150, 255, 0.8);
+  border-radius: 50%;
+  pointer-events: none;
+  transition: transform 0.1s ease-out, opacity 0.1s ease-out;
+}
+
+.info-text {
   display: grid;
   grid-template-rows: 1fr 1fr;
   color: #ea9083;
   margin-left: 120px;
   width: 450px;
-  /*background-color: red;*/
 }
 
-.photo-outline{
+.photo-outline {
   background-color: #21313c;
   display: grid;
-  grid-template-rows: 1fr;
   justify-content: center;
   align-items: center;
   width: 350px;
+  min-width: 200px;
   height: 350px;
-  border-radius:175px;
+  border-radius: 50%;
   margin-right: 130px;
-  grid-column: 2;
 }
 
-.me{
+.me {
   width: 150px;
   border-radius: 60px;
 }
 
-.school{
+.school {
   width: 350px;
+  border-radius: 2px;
+  border-style: solid;
+  border-color: #ea9083;
 }
 
-.github-button-image{
+.algonac {
+  height: 300px;
+  border: 2px solid #ea9083;
+  border-radius: 2px;
+}
+
+.github-button-image {
   width: 50px;
 }
 
-.github-button, .linkedIn-button{
+.github-button, .linkedIn-button {
   background: none;
-  border: solid;
+  border: 1px solid;
   border-radius: 50px;
-  border-width: 1px;
   width: 70px;
   height: 70px;
   transition: 0.5s;
-}
-
-.github-button:hover{
-  background-color: #dbe3db;
-}
-
-.buttons-with-icons{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-evenly;
-  padding-top: 50px;
-  padding-right: 70px;
-  /*background-color: pink;*/
-}
-
-.linkedIn-button{
-  display: flex;
-  justify-content: center;
-  align-items: center;
   font-family: Arial;
   font-weight: bold;
   font-size: 30px;
   color: black;
 }
 
-.linkedIn-button:hover{
-  background-color: rgb(0, 65, 130);
-  color: white;
-
+.github-button:hover, .linkedIn-button:hover {
+  background-color: #dbe3db;
 }
 
-.container{
+.linkedIn-button:hover {
+  background-color: rgb(0, 65, 130);
+  color: white;
+}
+
+.buttons-with-icons {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding-top: 50px;
+  padding-right: 70px;
+}
+
+.container {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-top: 20px;
-  border-color: black;
-  border-top-style: solid;
-  border-top-width: 1px;
+  border-top: 1px solid black;
   padding-top: 5px;
 }
 
-.container img{
-  order: 1;
+.container img {
   margin-left: 50px;
   margin-right: 175px;
   max-width: 300px;
 }
 
-.container div{
-  order: 0;
+.about-section {
+  margin-top: 20px;
+  border-top: 1px solid black;
+  padding-top: 5px;
+}
+
+.projectsList {
+  display: flex;
+  flex-direction: column;
+  margin-top: 8px;
+  border-top: 1px solid black;
+}
+
+.projectsList li img {
+  width: 150px;
+  height: auto;
+  margin-right: 10px;
+}
+
+.video-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-height: 500px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.projectContainerOdd, .projectContainerEven {
+  width: 80%;
+  max-width: 1000px;
+  padding: 20px;
+  border: 1px solid #ea9083;
+  border-radius: 5px;
+  margin: 20px auto;
+  background-color: #1f2a36;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.projectContainerEven{
+  align-self: flex-end;
+  margin-right: 16%;
+}
+
+.projectContainerOdd{
+  align-self: flex-start;
+  margin-left: 11%;
+}
+
+.footer li p{
+  color: white;
+}
+
+.contactInfo{
+  color: white;
+}
+
+.emailLink:hover{
+  text-decoration: underline;
+  color: white;
+}
+
+.back-to-top{
+  color: white;
+}
+
+.back-to-top:hover{
+  text-decoration: underline;
+}
+
+.copyright{
+  color: white;
+}
+
+.footer ul{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  height: 45px;
+  margin-bottom: 0px;
+}
+
+.footerBottom{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  background-color: black;
+  padding-bottom: 10px;
+  border-top: white;
+  border-style: solid;
 }
